--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # do we need to enter in the actual passoword here?
 
-MONGO_URI=mongodb+srv://bitdern:<password>@pleb-post.m8aptri.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://bitdern:Dickdern09!@pleb-post.m8aptri.mongodb.net/?retryWrites=true&w=majority
