gh oauth tinkering

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 # do we need to enter in the actual passoword here?
 
 MONGO_URI=mongodb+srv://bitdern:Dickdern09!@pleb-post.m8aptri.mongodb.net/?retryWrites=true&w=majority
+
+GITHUB_ID=675b3247809105ea4df4
+
+GITHUB_SECRET=5fe2e3788047035f879397f076e73f0825739c39
