--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
-# do we need to enter in the actual passoword here?
 
 MONGO_URI=mongodb+srv://bitdern:Dickdern09!@pleb-post.m8aptri.mongodb.net/?retryWrites=true&w=majority
 
 GITHUB_ID=675b3247809105ea4df4
 GITHUB_SECRET=5fe2e3788047035f879397f076e73f0825739c39
+
+LNBITS_KEY=c28f1818d94d4ab9a01fd02196f525ba
+LNBITS_ADMIN_ID=abc6fe539439457ca24e7569a08bcdcd
+
+VOLTAGE_URL=https://2866be8917.d.voltageapp.io
