moved functions to onboarding file

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ GITHUB_SECRET=5fe2e3788047035f879397f076e73f0825739c39
 LNBITS_KEY=c28f1818d94d4ab9a01fd02196f525ba
 LNBITS_ADMIN_ID=abc6fe539439457ca24e7569a08bcdcd
 
-VOLTAGE_URL=https://2866be8917.d.voltageapp.io
+LN_BITS_USER_MANAGER_URL=https://2866be8917.d.voltageapp.io/usermanager/api/v1/users
